gpu/config/gpu_driver_bug_workaround_type.h
@@ -113,6 +113,8 @@
          needs_offscreen_buffer_workaround)                  \
   GPU_OP(PACK_PARAMETERS_WORKAROUND_WITH_PACK_BUFFER,        \
          pack_parameters_workaround_with_pack_buffer)        \
+  GPU_OP(REBIND_TRANSFORM_FEEDBACK_BEFORE_RESUME,            \
+         rebind_transform_feedback_before_resume)            \
   GPU_OP(REGENERATE_STRUCT_NAMES,                            \
          regenerate_struct_names)                            \
   GPU_OP(REMOVE_POW_WITH_CONSTANT_EXPONENT,                  \
